Inclusao da foto de todos os membros

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 </div>
                 <div class="col-sm-3">
                  <div class="team-member">
-                        <img src="img/team/39.jpeg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/39.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Marco Rodrigues</h4>
                         <p class="text-muted">Diretor Jurídico-Financeiro</p>
                         <ul class="list-inline social-buttons">
@@ -407,7 +407,7 @@
                 </div>
             <div class="col-sm-3">
                  <div class="team-member">
-                        <img src="img/team/38.jpeg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/38.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Maria Andrijic</h4>
                         <p class="text-muted">Diretora de Marketing</p>
                         <ul class="list-inline social-buttons">
@@ -455,15 +455,15 @@
                             <h3 class="section-subheading text-muted">Colaboradores</h3>
                         </div>
                     </div>
-                    <div class="row">
+                <div class="row">
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/40.jpeg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/40.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Gustavo Giro</h4>
                         <p class="text-muted">Colaborador</p>
                         <ul class="list-inline social-buttons">                  
                             <li>
-                                <a href="" target="_blank">
+                                <a href="https://www.linkedin.com/in/gustavo-giro-resende-b27143112/" target="_blank">
                                     <i class="fa fa-linkedin"></i>
                                  </a>
                              </li>
@@ -474,12 +474,12 @@
                      
 				<div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/41.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/41.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Guilherme Kang</h4>
                         <p class="text-muted">Colaborador</p>
                         <ul class="list-inline social-buttons">
                             <li>
-                                <a href="" target="_blank">
+                                <a href="https://www.linkedin.com/in/guilherme-byon-cheol-kang-00881b1b3/" target="_blank">
                                     <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
@@ -489,7 +489,7 @@
 
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/42.png" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/42.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Victor Bonaldo</h4>
                         <p class="text-muted">Colaborador</p>
                         <ul class="list-inline social-buttons">
@@ -503,12 +503,12 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/43.png" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/43.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Vitor Procópio</h4>
                         <p class="text-muted">Colaborador</p>
                         <ul class="list-inline social-buttons">
                             <li>
-                                <a href="" target="_blank">
+                                <a href="https://www.linkedin.com/in/vitorpnunes/" target="_blank">
                                     <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
@@ -517,7 +517,7 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/44.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/44.jpeg" class="img-responsive img-circle" alt="">
                         <h4>Matheus Cally</h4>
                         <p class="text-muted">Colaborador</p>
                         <ul class="list-inline social-buttons">
@@ -531,8 +531,223 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="img/team/45.jpeg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/new/66.jpeg" class="img-responsive img-circle" alt="">
                         <h4>João Pedro</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/49.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Julia de Lima</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/50.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Mayara dos Santos</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/51.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Angelica Aparecida</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/52.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Juan de Araujo</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/53.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Widmila Mesquita</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/54.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Bruno Kenzo</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/55.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Jaqueline Santana</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/56.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Alxelio Ribeiro</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/57.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>João Victor</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/58.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Pâmela Evelyn</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/59.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Fabricio Barbosa</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/62.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Rodrigo Cardoso</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/64.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Aline Sousa</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/63.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Leonardo Bruscagini</h4>
+                        <p class="text-muted">Colaborador</p>
+                        <ul class="list-inline social-buttons">
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/team/new/65.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Rafael Souza</h4>
                         <p class="text-muted">Colaborador</p>
                         <ul class="list-inline social-buttons">
                             <li>
